# Client_App

./: BUILD.md  IMPLEMENTATION_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  README.md  STATUS.md
client/: index.html  package.json  tauri.conf.json  vite.config.js
client/src/: App.vue  main.js  style.css
client/src-tauri/: Cargo.toml
client/src-tauri/src/: main.rs  protocol.rs  service_client.rs
client/src/components/: Navbar.vue
client/src/stores/: auth.js
client/src/views/: About.vue  Activation.vue  Dashboard.vue  Login.vue  Scan.vue  Settings.vue
include/: archive_scanner.h  cloud_intelligence.h  logger.h  network_protection.h  pipe_server.h  scanner.h  scheduled_scanner.h  service.h  system_integration.h  threat_engine.h  utils.h
installer/: Product.wxs
installer/CustomActions/: CustomActions.cpp
scripts/: build_all.ps1
service/: CMakeLists.txt
service/include/: file_monitor.h  logger.h  pipe_server.h  service.h  session_manager.h  utils.h
service/src/: archive_scanner.cpp  logger.cpp  main.cpp  pipe_server.cpp  scheduled_scanner.cpp  service.cpp  session_manager.cpp  system_integration.cpp  utils.cpp
shared/include/: protocol.h
src/: cloud_intelligence.cpp  file_monitor.cpp  logger.cpp  main.cpp  network_protection.cpp  pipe_server.cpp  scanner.cpp  scheduled_scanner.cpp  service.cpp  session_manager.cpp  threat_engine.cpp  utils.cpp
tests/: CMakeLists.txt  main_test.cpp
tests/integration/: CMakeLists.txt  README.md  test_benchmark.cpp  test_config.ini  test_integration.cpp  test_service_integration.cpp
tests/unit/: test_file_monitor.cpp  test_threat_engine.cpp
